syntax = "proto3";

package com.ticket_app.v1;

// import "com/ticket_app/v1/seats.proto";

message Event {
    string id = 1;           
    string title = 2;
}

message EventSeat {
    string id = 1;
    int32 number = 2;
    // com.ticket_app.v1.SeatStatus status = 3;
}

message EventRequest {
    string id = 1;
}

message EventsRequest {
    optional string title = 1;
}

message ModifyEventResponse {
    string id = 1;           
    string title = 2;
}

message GetEventResponse {
    string id = 1;           
    string title = 2;
    repeated EventSeat seats = 5;
}

message GetEventsResponse {
    string id = 1;           
    string title = 2;
}

message CreateEventRequest {
    string title = 1;
}

message UpdateEventRequest {
    string id = 1;
    string title = 2;
}

message DeleteEventRequest {
    string id = 1;
}

service Events {
    rpc GetEvent(EventRequest) returns (GetEventResponse);
    rpc GetEvents(EventsRequest) returns (stream GetEventsResponse);
    rpc CreateEvent(CreateEventRequest) returns (ModifyEventResponse);
    rpc UpdateEvent(UpdateEventRequest) returns (ModifyEventResponse);
    rpc DeleteEvent(DeleteEventRequest) returns (ModifyEventResponse);
}